// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-with-https serve should start a development server 1`] = `
SCRIPTS: [
  "/runtime-a5c914bdf89f464ecb2e.js",
  "/235-fed19355ef816e81a74f.js",
  "/main-6c367219c2f7167dbe50.js",
]
CSS: [
  "/main-cb8848ae92e1e9d08128.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://some-cdn.com;"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="eRNyDeb">
        <div class="MYunKdE">
          Initial
        </div>
        <img src="/a85d2645cc4d80a20b5b.png">
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
     <div id="app">
       <div class="eRNyDeb">
         <div class="MYunKdE">
-          Initial
+          Client
         </div>
         <img src="/a85d2645cc4d80a20b5b.png">
       </div>

`;

exports[`sku-with-https serve should support the supplied middleware 1`] = `
"OK"
POST HYDRATE DIFFS: 
-OK
\\ No newline at end of file
+<html>
+  <head>
+  </head>
+  <body>
+    OK
+  </body>
+</html>
\\ No newline at end of file

`;

exports[`sku-with-https start should start a development server 1`] = `
SCRIPTS: [
  "/runtime.js",
  "/vendors-node_modules_pnpm_loadable_component_5_15_3_react_18_2_0_node_modules_loadable_compon-f3a86c.js",
  "/main.js",
]
CSS: [
  "/main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://some-cdn.com 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
  </head>
  <body>
    <div id="app">
      <div class="lessStyles__root___eRNyDeb">
        <div class="lessStyles__nested___MYunKdE">
          Initial
        </div>
        <img src="/a85d2645cc4d80a20b5b.png">
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
     <div id="app">
       <div class="lessStyles__root___eRNyDeb">
         <div class="lessStyles__nested___MYunKdE">
-          Initial
+          Client
         </div>
         <img src="/a85d2645cc4d80a20b5b.png">
       </div>

`;

exports[`sku-with-https start should support the supplied middleware 1`] = `
"OK"
POST HYDRATE DIFFS: 
-OK
\\ No newline at end of file
+<html>
+  <head>
+  </head>
+  <body>
+    OK
+  </body>
+</html>
\\ No newline at end of file

`;

exports[`sku-with-https start-ssr should support the supplied middleware 1`] = `
"OK"
POST HYDRATE DIFFS: 
-OK
\\ No newline at end of file
+<html>
+  <head>
+  </head>
+  <body>
+    OK
+  </body>
+</html>
\\ No newline at end of file

`;
